# Cnake

./: .clang-format  CMakeLists.txt  LICENSE  Readme.md  main.cpp
assets/: font_data.h  food_sprite.h
core/: Constants.hpp  Food.cpp  Food.hpp  Game.cpp  Game.hpp  Renderer.hpp  Snake.cpp  Snake.hpp
